feat: inputs created as componets also some styles added

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,17 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100%;
 }
 
 body {
-  background-color: #F1EFEF;
+  background-color: #191717;
+  margin: 0;
+  height: 100%
 }
 
 main {
   display: grid;
   place-items: center;
+  height: 100%;
 }
