--- a/src/components/Buttons/buttons.scss
+++ b/src/components/Buttons/buttons.scss
@@ -1,13 +1,16 @@
 .base-button {
-    padding: 5px 20px;
-    background-color: #9EDE73;
-    color: #FAFAFA;
+    padding: 10px 20px;
+    background-color: #68ef71;
+    color: #FFFFFF;
     border-radius: 40px;
     border: none;
-    font-weight: 600;
+    font-weight: 800;
+    font-size: large;
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
 
     &--alternative {
-        background-color: #FAFAFA;
-        color: #9EDE73;
+        background-color: #FFFFFF;
+        color: #68ef71;
     }
 }
