--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,12 @@
+@import "colors";
+
 #root {
-  max-width: 1280px;
   text-align: center;
   height: 100%;
 }
 
 body {
-  background-color: #191717;
+  background-color: $dark-color;
   margin: 0;
   height: 100%
 }
