--- a/src/App.scss
+++ b/src/App.scss
@@ -16,3 +16,18 @@ main {
   place-items: center;
   height: 100%;
 }
+
+
+.authorization {
+  display: grid;
+  place-items: center;
+  gap: 50px;
+  background-color: $light-color;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 50px;
+  padding-top: 50px;
+  align-items: center;
+  border-radius: 50px 50px 0px 0px;
+}
