--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,5 +1,5 @@
-.authorization {
-    input, button {
-        width: 70%;
-    }
+.register-redirection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
